<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        >


        <Button
            android:id="@+id/mBtn_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_word"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

        </LinearLayout>

        <Button
            android:id="@+id/mBtn_sentence"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_sentence"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
        </LinearLayout>

        <Button
            android:id="@+id/mBtn_paragraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_paragraph"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
        </LinearLayout>

        <Button
            android:id="@+id/mBtn_chineseword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_chinese_word"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/mBtn_cn_sent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_chinese_sentence"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/mBtn_cn_para"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_theme_bg"
            android:gravity="center"
            android:text="@string/txt_chinese_paragraph"
            android:textColor="@color/white"
            android:textSize="@dimen/content_title_size" />

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

</ScrollView>
